// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown aje-dropdown is-medium"
  >
    <label
      class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
      for="CustomSelect-:r0:-combo"
      id="CustomSelect-:r0:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r0:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r0:-label"
        class="sc-pyfCe bYPcJV aje-combobox__input"
        id="CustomSelect-:r0:-combo"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <div
        class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r0:-label"
          class="sc-kDvujY kycYbV aje-combobox__menu"
          id="CustomSelect-:r0:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="sc-ipEyDJ fkBmOr aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="false"
            class="sc-ipEyDJ fkBmOr aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown--floating aje-dropdown--floating is-medium"
  >
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <div
        class="sc-jSUZER dDTVlj"
      >
        <div
          aria-controls="CustomSelect-:r3:-list"
          aria-describedby=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="CustomSelect-:r3:-label"
          class="sc-pyfCe bYPcJV aje-combobox__input"
          id="CustomSelect-:r3:-combo"
          role="combobox"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </div>
        <div
          class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
        >
          <ul
            aria-labelledby="CustomSelect-:r3:-label"
            class="sc-kDvujY kycYbV aje-combobox__menu"
            id="CustomSelect-:r3:-list"
            role="listbox"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="sc-ipEyDJ fkBmOr aje-combobox__option is-focused"
              role="option"
            >
              Option 1
            </li>
            <li
              aria-selected="false"
              class="sc-ipEyDJ fkBmOr aje-combobox__option"
              role="option"
            >
              Option 2
            </li>
          </ul>
        </div>
        <label
          class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
          for="CustomSelect-:r3:-combo"
          id="CustomSelect-:r3:-label"
        >
          Custom dropdown label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches multi-select enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown aje-dropdown is-medium"
  >
    <label
      class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
      for="CustomSelect-:r1:-combo"
      id="CustomSelect-:r1:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r1:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r1:-label"
        class="sc-pyfCe bYPcJV aje-combobox__input"
        id="CustomSelect-:r1:-combo"
        role="combobox"
        tabindex="0"
      >
        <span />
      </div>
      <div
        class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r1:-label"
          class="sc-kDvujY kycYbV aje-combobox__menu is-multiselect"
          id="CustomSelect-:r1:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="sc-ipEyDJ fkBmOr aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="true"
            class="sc-ipEyDJ fkBmOr aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches search enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown aje-dropdown is-medium"
  >
    <label
      class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
      for="CustomSelect-:r2:-combo"
      id="CustomSelect-:r2:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r2:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r2:-label"
        class="sc-pyfCe bYPcJV aje-combobox__input"
        id="CustomSelect-:r2:-combo"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <div
        class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r2:-label"
          class="sc-kDvujY kycYbV aje-combobox__menu"
          id="CustomSelect-:r2:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="sc-eDWCr kIXyrM aje-combobox__search"
          >
            <input
              class="sc-bqWxrE cKgkSq"
              type="text"
              value=""
            />
            <i
              aria-hidden="true"
              class="sc-csuSiG fORrjj material-icons is-medium"
            >
              search
            </i>
          </li>
          <li
            aria-selected="true"
            class="sc-ipEyDJ fkBmOr aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="false"
            class="sc-ipEyDJ fkBmOr aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
